# openEVario

./: .autotools  .cproject  .gitignore  .gitmodules  .project  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  checkHeaders.sh  config.h.in  configure  configure.ac  configureFullOptimizer.sh  doxygen.cfg
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  requests  traces.0
demo_calibration/BMX160SensorBoardTest/: .cproject  .project  BMX160SensorBoardTest.c  BMX160UdpSensorBoardTest.c  readfile.c  setupPPP.sh  setupSLIP.sh
demo_calibration/MPU-9150-Test/: .cproject  .project  I2CPort.cpp  I2CPort.h  MPU-9150-Test.cpp  MPU-9150Defs.h  OEVCommon.h  readfile.c
demo_calibration/MPU-9150-Test/Debug/: I2CPort.d  MPU-9150-Test.d  makefile  readfile  subdir.mk
demo_calibration/MPU-9150-Test/Release/: makefile  objects.mk  subdir.mk
doc/: .gitignore  BarometricFormula-Test.ods  Calc-Calibration-Values-BMX160.ods  Calc-Calibration-Values-MPU-9150.ods  Rotation-Matrixes.ods
doc/doxygen/html/: _fast_math_8cpp.html  _fast_math_8cpp__incl.map  _fast_math_8cpp__incl.md5  _fast_math_8cpp_source.html  _fast_math_8h.html  _fast_math_8h.js  _fast_math_8h__dep__incl.map  _fast_math_8h__dep__incl.md5  _fast_math_8h__incl.map  _fast_math_8h__incl.md5  _fast_math_8h_source.html  _fast_math__test_8cpp.html  _fast_math__test_8cpp__incl.map  _fast_math__test_8cpp__incl.md5  _fast_math__test_8cpp_source.html  _fast_math_sine_table_8cpp.html  (+171 more)
m4/: .gitignore  ax_cxx_compile_build_stdcxx_11.m4
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  en@quot.gmo  en@quot.po  openEVario.pot
src/: .gitignore  BMX160SensorBoardCalib.properties  CommonDefs.h  CommonLogger_ShLib.h  FastMath.cpp  FastMath.h  FastMath_test.cpp  GliderVarioMain.h  GliderVarioMeasurementMatrix.cpp  GliderVarioMeasurementMatrix.h  GliderVarioMeasurementMatrix_test.cpp  GliderVarioMeasurementUpdater.cpp  GliderVarioMeasurementUpdater.h  GliderVarioMeasurementUpdater_test.cpp  GliderVarioMeasurementVector.cpp  GliderVarioMeasurementVector.h  GliderVarioModel.cpp  GliderVarioModel.h  GliderVarioModel_test.cpp  GliderVarioStatus.cpp  GliderVarioStatus.h  GliderVarioStatus_test.cpp  GliderVarioTransitionMatrix.cpp  GliderVarioTransitionMatrix.h  GliderVarioTransitionMatrix_test.cpp  MPU9150Calib.properties  Makefile.am  Makefile.in  MeasureMatrix.cpp  MeasureMatrix.h  MeasureMatrix_test.cpp  OEVCommon.h  RotMatrixConversion.cpp  RotMatrixConversion.h  RotMatrixConversion_test.cpp  RotationMatrix.cpp  RotationMatrix.h  dllCommon.h  genSineTables.cpp  log4cxx.properties  (+5 more)
src/drivers/: DriverBase.h  DriverLibBase.h  GliderVarioDriverBase.h  GliderVarioDriverLibBase.h  sensorDriver.h
src/drivers/AMS5915/: AMS5915Defs.h  AMS5915Driver.cpp  AMS5915Driver.h  AMS5915Lib.cpp  AMS5915Lib.h  AMS5915Main.cpp  Makefile.am  Makefile.in
src/drivers/AbsPressureMPL3115/: AbsPressureMPL3115Main.cpp  Makefile.am  Makefile.in
src/drivers/BoschBMXSensorBoard/: BMXSensorBoardDriver.cpp  BMXSensorBoardDriver.h  BMXSensorBoardLib.cpp  BMXSensorBoardLib.h  BMXSensorBoardMain.cpp  Makefile.am  Makefile.in
src/drivers/IGCReader/: BRecord.h  BRecordSection.cpp  BRecordSection.h  IGCReaderDriver.cpp  IGCReaderDriver.h  IGCReaderLib.cpp  IGCReaderLib.h  IGCReaderMain.cpp  Makefile.am  Makefile.in
src/drivers/MPL3115/: MPL3115A2.h  MPL3115Driver.cpp  MPL3115Driver.h  MPL3115Lib.cpp  MPL3115Lib.h  MPL3115Main.cpp  Makefile.am  Makefile.in
src/drivers/MPU-9150/: MPU-9150Defs.h  MPU-9150Driver.cpp  MPU-9150Driver.h  MPU-9150Lib.cpp  MPU-9150Lib.h  MPU-9150Main.cpp  Makefile.am  Makefile.in
src/drivers/MS4515/: MS4515DO.h  MS4515Driver.cpp  MS4515Driver.h  MS4515Lib.cpp  MS4515Lib.h  MS4515Main.cpp  Makefile.am  Makefile.in
src/drivers/NmeaGPS/: Makefile.am  Makefile.in  NMEA0813.cpp  NMEA0813.h  NMEA0813Protocol.cpp  NMEA0813Protocol.h  NMEASentence.h  NMEASet.cpp  NMEASet.h  NmeaGPSDriver.cpp  NmeaGPSDriver.h  NmeaGPSLib.cpp  NmeaGPSLib.h  NmeaGPSMain.cpp
src/drivers/TE-MEAS-AbsPressure/: Makefile.am  Makefile.in  TE-MEAS-AbsPressureDefs.h  TE-MEAS-AbsPressureDriver.cpp  TE-MEAS-AbsPressureDriver.h  TE-MEAS-AbsPressureLib.cpp  TE-MEAS-AbsPressureLib.h  TE-MEAS-AbsPressureMain.cpp
src/drivers/driverTemplate/: Makefile.am  templateDriver.cpp  templateDriver.h  templateLib.cpp  templateLib.h  templateMain.cpp
src/drivers/simul/: Makefile.am  Makefile.in  simulDriver.h  simulMain.cpp
src/kalman/: GliderVarioDriverBase.cpp  GliderVarioMeasurementUpdater.cpp  GliderVarioMeasurementUpdater.h  GliderVarioMeasurementVector.cpp  GliderVarioMeasurementVector.h  GliderVarioStatus.cpp  GliderVarioStatus.h  GliderVarioTransitionMatrix.cpp  GliderVarioTransitionMatrix.h  Makefile.am  Makefile.in  MeasureMatrix.cpp  MeasureMatrix.h
src/main/: GliderVarioDriverList.cpp  GliderVarioDriverList.h  GliderVarioMain.cpp  GliderVarioMainPriv.cpp  GliderVarioMainPriv.h  Makefile.am  Makefile.in  ProgramOptions.h
src/main/driverBase/: BusDeviceSensorBase.cpp  BusDeviceSensorBase.h  DifferentialPressureSensorBase.cpp  DifferentialPressureSensorBase.h  DriverBase.cpp  DriverLibBase.cpp  IMUBase.cpp  IMUBase.h
src/util/: .gitignore  FastMath.cpp  FastMath.h  GliderVarioDriverBase.cpp  GliderVarioDriverLibBase.cpp  GliderVarioExceptionBase.cpp  GliderVarioExceptionBase.h  Makefile.am  Makefile.in  NaturalConstants.h  OEV_Enum.h  PortBase.cpp  PortBase.h  RotationMatrix.cpp  RotationMatrix.h  crc.cpp  crc.h  genSineTables.cpp
src/util/drivers/: DriverBase.cpp  DriverLibBase.cpp  IMUBase.cpp  IMUBase.h
src/util/io/: DatagramPort.cpp  DatagramPort.h  I2CPort.cpp  I2CPort.h  PortBase.cpp  PortBase.h  SerialPort.cpp  SerialPort.h  StreamPort.cpp  StreamPort.h  TCPPort.cpp  TCPPort.h  UDPPort.cpp  UDPPort.h
test/src/: .gitignore  FastMath_test.cpp  GliderVarioMeasurementUpdater_test.cpp  GliderVarioMeasurementVector_test.cpp  GliderVarioStatus_test.cpp  GliderVarioTransitionMatrix_test.cpp  Makefile.am  Makefile.in  MeasureMatrix_test.cpp  RotationMatrix_test.cpp  testOpenEVario.cpp
(+242 files in other folders)
